# information_extractor

./: .gitattributes  .gitignore  INSTALLATION.md  MANIFEST.in  README.md  example_relations.py  information_extraction.py  main.py  pyproject.toml  requirements.txt  requirements.txt.bak  setup.cfg  setup.py  setup.py.bak  spacy_help_functions.py  spanbert.py
.github/workflows/: ci.yml
assets/: en_core_web_md-3.5.0-py3-none-any.whl  en_core_web_sm-3.5.0-py3-none-any.whl  torch-2.6.0-py3-none-any.whl
code/: spanbert.py
iecode/: rel_extractor.py  spanbert.py
information_extractor/: __init__.py  dependencies.py  download_model.py  main.py
information_extractor/iecode/: spanbert.py
information_extractor/iecode/pytorch_pretrained_bert/: file_utils.py  tokenization.py
pytorch_pretrained_bert/: file_utils.py
