[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "information_extractor"
version = "0.1.1"
description = "Information extractor using spaCy + SpanBERT"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  { name="Rajatasusual" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "annotated-types==0.7.0",
  "blis==0.7.11",
  "catalogue==2.0.10",
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cloudpathlib==0.21.0",
  "confection==0.1.5",
  "coreferee==1.4.1",
  "coreferee-model-en @ https://github.com/rajatasusual/information_extractor/raw/master/assets/coreferee_model_en.zip#sha256=aec5662b4af38fbf4b8c67e4aada8b828c51d4a224b5e08f7b2b176c02d8780f",
  "cymem==2.0.11",
  "en-core-web-md @ https://github.com/rajatasusual/information_extractor/raw/master/assets/en_core_web_md-3.5.0-py3-none-any.whl",
  "filelock==3.13.1",
  "fsspec==2024.6.1",
  "idna==3.10",
  "Jinja2==3.1.6",
  "langcodes==3.5.0",
  "language_data==1.3.0",
  "marisa-trie==1.2.1",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "mdurl==0.1.2",
  "mpmath==1.3.0",
  "murmurhash==1.0.12",
  "networkx==3.3",
  "numpy==1.26.4",
  "packaging==24.2",
  "pathlib_abc==0.1.1",
  "pathy==0.11.0",
  "pillow==11.0.0",
  "preshed==3.0.9",
  "psutil==7.0.0",
  "pydantic==1.10.21",
  "pydantic_core==2.33.1",
  "Pygments==2.19.1",
  "requests==2.32.3",
  "rich==14.0.0",
  "scipy==1.15.2",
  "shellingham==1.5.4",
  "smart-open==6.4.0",
  "spacy==3.5.4",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "srsly==2.5.1",
  "sympy==1.13.1",
  "thinc==8.1.12",
  "torch @ https://github.com/rajatasusual/information_extractor/raw/modularise/assets/torch-2.6.0-py3-none-any.whl",
  "tqdm==4.67.1",
  "typer==0.9.4",
  "typing-inspection==0.4.0",
  "typing_extensions==4.13.2",
  "urllib3==2.4.0",
  "wasabi==1.1.3",
  "weasel==0.4.1",
  "wrapt==1.17.2"
]

[project.scripts]
ie = "information_extractor.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
