[metadata]
name = spacy_coref_rel
version = 0.1.0
description = spacy_coref_rel is a tool that leverages spaCy for coreference resolution and SpanBERT for relation extraction. This project integrates named entity recognition (NER) with relation extraction to identify and analyze relationships between entities in text.
author = Rajatasusual
author_email = krajat4@gmail.com
license = MIT
home_page = https://github.com/rajatasusual/spacy_coref_rel
keywords = spacy, coreference resolution, relation extraction, named entity recognition, NLP
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries